--- a/app/src/main/res/layout/frag_setting.xml
+++ b/app/src/main/res/layout/frag_setting.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_ellipse"
+        android:backgroundTint="@color/white"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
@@ -45,6 +46,15 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/oval"
             android:text="반려동물 정보 수정" />
+
+        <Button
+            android:id="@+id/btn_Info"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/oval"
+            android:text="개인정보 수정" />
 
         <Button
             android:id="@+id/btn_logout"
