--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="arr_gender">
-        <item>남자</item>
-        <item>여자</item>
+        <item>수컷</item>
+        <item>암컷</item>
     </string-array>
 </resources>
