--- a/app/src/main/res/layout/activity_boardadd.xml
+++ b/app/src/main/res/layout/activity_boardadd.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DiaryAdd1Activity">
+    tools:context=".BoardAddActivity">
 
     <TextView
         android:layout_width="match_parent"
