--- a/app/src/main/res/layout/activity_dog_info_add.xml
+++ b/app/src/main/res/layout/activity_dog_info_add.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="반려동물 정보 수정"
+            android:text="반려동물 정보등록"
             android:textSize="20sp"
             android:textStyle="bold"
             android:background="@color/backgroundColor"
