--- a/app/src/main/res/layout/frag_setting.xml
+++ b/app/src/main/res/layout/frag_setting.xml
@@ -48,7 +48,7 @@
             android:text="반려동물 정보 수정" />
 
         <Button
-            android:id="@+id/btn_Info"
+            android:id="@+id/btn_profile"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
