--- a/app/src/main/res/layout/frag_home.xml
+++ b/app/src/main/res/layout/frag_home.xml
@@ -26,7 +26,7 @@
         android:orientation="vertical"
         android:clipToPadding="false">
 
-        <android.support.v7.widget.CardView
+        <android.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:layout_marginLeft="10dp"
@@ -34,7 +34,8 @@
             android:layout_marginBottom="15dp"
             app:cardCornerRadius="10dp"
             android:elevation="50dp"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="true"
+            tools:ignore="MissingClass">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -168,18 +169,18 @@
                             android:textSize="15sp"
                             android:textStyle="bold" />
                         <TextView
-                        android:id="@+id/tv_DogWeight"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:gravity="left"
-                        android:text="몸무게를 입력해주세요."
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
+                            android:id="@+id/tv_DogWeight"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:gravity="left"
+                            android:text="몸무게를 입력해주세요."
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </android.cardview.widget.CardView>
 
         <Button
             android:id="@+id/btn_walk"
